--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- theme css -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/colors/color-3.css" rel="stylesheet">
 
     <script>
         var url =
@@ -1286,8 +1287,6 @@
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/one-page/scrollIt.min.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/dark-light.js"></script>
-
     <!-- end -->
 </body>
 <!-- Body End -->
