--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx" data-bs-theme="dark">
+<html lang="zxx">
 
 
 <!-- Mirrored from pxdraft.com/themeforest/tapsi/index-01.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 Feb 2023 06:37:48 GMT -->
