--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             <div class="icon"><i class="bi bi-phone"></i></div>
                             <div class="feature-content">
                                 <h5>Web Designing</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>Web designing is the initial phase of building a website from scratch. For a website to be responsive, engaging, and easy to navigate, strategic designing has to be implemented in this early stage. Proficient web designers do the primary task of transforming a concept into a visually appealing layout. This design or layout governs how the website will look or feel to users. In this designing process, expert web designers intricate the best possible user experience.</p>
                             </div>
                         </div>
                     </div>
@@ -395,7 +395,7 @@
                             <div class="icon"><i class="bi bi-laptop"></i></div>
                             <div class="feature-content">
                                 <h5>Graphic Designing</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>In this era of cutthroat competition, a brand needs smart and creative audio-visual representations to make an impression on the audience’s mind. If your brand does not have an interesting visual identity, chances are that it will be lost in the competition. With so many rival companies vying for business, you need to have appealing and engrossing designs that will grab the attention of your targeted customer base and make them remember your business the next time they are shopping for similar products or services.</p>
                             </div>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                             <div class="icon"><i class="bi bi-triangle"></i></div>
                             <div class="feature-content">
                                 <h5>Photography</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>Photography is another skill that most consider automatic when they’re given any decent camera. When looking over photos taken by a professional versus someone who takes pictures because they can, there is a distinct difference. Your customers can see it too. Being a multimedia production agency we only produce content of the highest quality. All of the content that you put out there should be impeccable in order to keep up the quality of your brand. No, not every social media post needs to be professional quality, but advertisements and pretty much everything else need to be of the elevated quality that your customers have learned to expect from your brand.</p>
                             </div>
                         </div>
                     </div>
