--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx" data-bs-theme="dark">
 
 
-<!-- Mirrored from pxdraft.com/themeforest/tapsi/index-01.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 Feb 2023 06:37:48 GMT -->
+<!-- Mirrored from pxdraft.com/themeforest/tapsi/index-01-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 03 Feb 2023 10:17:14 GMT -->
 <head>
     <!-- metas -->
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Tapsi - Portfolio Template">
     <meta name="description" content="Tapsi - Portfolio Template">
     <!-- title -->
-    <title>Ashish - Portfolio</title>
+    <title>Tapsi - Portfolio Template</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- theme css -->
