--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Tapsi - Portfolio Template">
     <meta name="description" content="Tapsi - Portfolio Template">
     <!-- title -->
-    <title>Tapsi - Portfolio Template</title>
+    <title>Ashish - Portfolio</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- theme css -->
