--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
                     <a href="#"><i class="fab fa-pinterest"></i></a>
                 </li> -->
             </ul>
-            <p class="copyright">© 2023 copyright all right reserved</p>
+            <p class="copyright">© 2023 copyright all right reserved by Ashish Tarale.</p>
         </div>
     </footer>
     <!-- End Footer -->
