--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <!-- theme css -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/colors/color-3.css" rel="stylesheet">
+    
+    <style>
+        .wa-chat-box-poweredby{
+            display: none;
+        }
+    </style>
 
     <script>
         var url =
