--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <h2>I'm a <span id="type-it">Website Designer</span></h2>
                             <p class="pe-lg-5">Web presence has become a necessity for your business to remain active in modern times. The website is your business ' true reflection that does not just provide your company's information but enables users to connect your business type. Thus a website should be built with full commitment and passion, mistreatment of the most advanced net development techniques.</p>
                             <div class="btn-bar">
-                                <a class="px-btn px-btn-theme" href="#contactus">Download cv <i class="bi-download"></i> </a>
+                                <a class="px-btn px-btn-theme" href="assets/img/Ashish-resume.pdf">Download cv <i class="bi-download"></i> </a>
                             </div>
                         </div>
                     </div>
