--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="pxdraft">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Tapsi - Portfolio Template">
-    <meta name="description" content="Tapsi - Portfolio Template">
+    <meta name="keywords" content="Ashish - Portfolio">
+    <meta name="description" content="Ashish - Portfolio">
     <!-- title -->
     <title>Ashish - Portfolio</title>
     <!-- Favicon -->
