--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- title -->
     <title>Ashish - Portfolio</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.jpg">
     <!-- theme css -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/colors/color-3.css" rel="stylesheet">
