--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           },
           brandSetting: {
             brandName: "Ashish",
-            brandSubTitle: "Website Designer",
+            brandSubTitle: "Senior Website Developer",
             //   "brandImg":"https://i.postimg.cc/N0tvzBzP/30.jpg",
             brandImg: "img/logo/whatsapp.jpg",
             welcomeText: "Hi there!\nHow can I help you?",
@@ -190,7 +190,7 @@
                         <div class="home-intro">
                             <h6>👋 Hi, I’ m</h6>
                             <h1>Ashish Tarale</h1>
-                            <h2>I'm a <span id="type-it">Website Designer</span></h2>
+                            <h2>I'm a <span id="type-it">Senior Website Developer</span></h2>
                             <p class="pe-lg-5">Web presence has become a necessity for your business to remain active in modern times. The website is your business ' true reflection that does not just provide your company's information but enables users to connect your business type. Thus a website should be built with full commitment and passion, mistreatment of the most advanced net development techniques.</p>
                             <div class="btn-bar">
                                 <a class="px-btn px-btn-theme" href="assets/img/Ashish-resume.pdf" target="_blank">Download cv <i class="bi-download"></i> </a>
@@ -413,8 +413,8 @@
                         <div class="feature-box-01">
                             <div class="icon"><i class="bi bi-phone"></i></div>
                             <div class="feature-content">
-                                <h5>Web Designing</h5>
-                                <p>Web designing is the initial phase of building a website from scratch. For a website to be responsive, engaging, and easy to navigate, strategic designing has to be implemented in this early stage. Proficient web designers do the primary task of transforming a concept into a visually appealing layout. This design or layout governs how the website will look or feel to users. In this designing process, expert web designers intricate the best possible user experience.</p>
+                                <h5>Web Development & Designing </h5>
+                                <p>Web Development & Designing is the initial phase of building a website from scratch. For a website to be responsive, engaging, and easy to navigate, strategic designing has to be implemented in this early stage. Proficient web designers do the primary task of transforming a concept into a visually appealing layout. This design or layout governs how the website will look or feel to users. In this designing process, expert web designers intricate the best possible user experience.</p>
                             </div>
                         </div>
                     </div>
@@ -480,6 +480,52 @@
                 </div>
                 <div class="lightbox-gallery mb-5">
                     <div class="row g-3 g-lg-4 portfolio-content">
+                        
+                        <div class="col-sm-6 col-lg-4 grid-item">
+                            <div class="portfolio-box">
+                                <div class="portfolio-text">
+                                    <h6>Kashkan Restaurants</h6>
+                                    <p>Website Design & Development</p>
+                                    <a class="gallery-link" target="_blank" href="https://kashkanrestaurants.com/"><i class="bi-arrow-up-right-circle"></i></a>
+                                </div>
+                                <div class="portfolio-img">
+                                    <img src="assets/img/project-14.webp" title="" alt="">
+                                    <!-- <a class="px_modal portfolio-modal-link" href="#project_1">
+                                        <i class="fa fa-plus"></i>
+                                    </a> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4 grid-item">
+                            <div class="portfolio-box">
+                                <div class="portfolio-text">
+                                    <h6>Eterne Clinic</h6>
+                                    <p>Website Design & Development</p>
+                                    <a class="gallery-link" target="_blank" href="https://eterneclinic.com/"><i class="bi-arrow-up-right-circle"></i></a>
+                                </div>
+                                <div class="portfolio-img">
+                                    <img src="assets/img/project-13.webp" title="" alt="">
+                                    <!-- <a class="px_modal portfolio-modal-link" href="#project_1">
+                                        <i class="fa fa-plus"></i>
+                                    </a> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4 grid-item">
+                            <div class="portfolio-box">
+                                <div class="portfolio-text">
+                                    <h6>Miyuki World</h6>
+                                    <p>Website Design & Development</p>
+                                    <a class="gallery-link" target="_blank" href="https://miyukiworld.com/"><i class="bi-arrow-up-right-circle"></i></a>
+                                </div>
+                                <div class="portfolio-img">
+                                    <img src="assets/img/project-12.jpg" title="" alt="">
+                                    <!-- <a class="px_modal portfolio-modal-link" href="#project_1">
+                                        <i class="fa fa-plus"></i>
+                                    </a> -->
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-sm-6 col-lg-4 grid-item">
                             <div class="portfolio-box">
                                 <div class="portfolio-text">
@@ -489,6 +535,21 @@
                                 </div>
                                 <div class="portfolio-img">
                                     <img src="assets/img/project-11.jpg" title="" alt="">
+                                    <!-- <a class="px_modal portfolio-modal-link" href="#project_1">
+                                        <i class="fa fa-plus"></i>
+                                    </a> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4 grid-item">
+                            <div class="portfolio-box">
+                                <div class="portfolio-text">
+                                    <h6>Shreya Life Sciences</h6>
+                                    <p>Website Design & Development</p>
+                                    <a class="gallery-link" target="_blank" href="https://www.shreya.co.in/"><i class="bi-arrow-up-right-circle"></i></a>
+                                </div>
+                                <div class="portfolio-img">
+                                    <img src="assets/img/project-15.webp" title="" alt="">
                                     <!-- <a class="px_modal portfolio-modal-link" href="#project_1">
                                         <i class="fa fa-plus"></i>
                                     </a> -->
