--- a/checkout.html
+++ b/checkout.html
@@ -233,7 +233,7 @@
     document.getElementById('successMessage').classList.remove('hidden');
 
     // Send email
-    emailjs.send("service_j31dtr5", "template_gz5rb2n", {
+    emailjs.send("service_oxvbppf", "template_gz5rb2n", {
       name: name,
       email: email,
       address: address,
