--- a/checkout.html
+++ b/checkout.html
@@ -108,7 +108,7 @@
 
     <div class="order-summary">
       <h2>Order Summary</h2>
-      <div id="orderItems"></div>
+      <div id="order_id"></div>
       <div class="total" id="orderTotal"></div>
     </div>
 
@@ -132,7 +132,7 @@
 
   function loadOrderSummary() {
     const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const orderItemsContainer = document.getElementById('orderItems');
+    const orderItemsContainer = document.getElementById('order_id');
     const orderTotalContainer = document.getElementById('orderTotal');
     
     if (cart.length === 0) {
@@ -169,10 +169,29 @@
     const email = document.getElementById('email').value.trim();
     const address = document.getElementById('address').value.trim();
 
-    if (!name || !email || !address) {
-      alert('Please complete all fields.');
-      return;
-    }
+    let hasError = false;
+      if (!name) {
+        showError(document.getElementById('name'), 'Full name is required');
+        hasError = true;
+      } else {
+        clearError(document.getElementById('name'));
+      }
+
+      if (!email) {
+        showError(document.getElementById('email'), 'Email is required');
+        hasError = true;
+      } else {
+        clearError(document.getElementById('email'));
+      }
+
+      if (!address) {
+        showError(document.getElementById('address'), 'Address is required');
+        hasError = true;
+      } else {
+        clearError(document.getElementById('address'));
+      }
+
+      if (hasError) return;
 
     const cart = JSON.parse(localStorage.getItem('cart')) || [];
     let total = 0;
@@ -180,57 +199,94 @@
       total += item.price * item.quantity;
     });
 
-    // Razorpay options
     const options = {
-      key: "rzp_test_zIWjX6N9INsQ2T",
-      amount: total * 100,
-      currency: "INR",
-      name: "Ashtech Shop",
-      description: "Order Payment",
-      handler: function(response) {
-        console.log(response);
+  key: "rzp_test_zIWjX6N9INsQ2T",
+  amount: total * 100,
+  currency: "INR",
+  name: "Ashtech Shop",
+  description: "Order Payment",
+  handler: function(response) {
+    console.log(response);
 
-        // Remove cart
-        localStorage.removeItem('cart');
+    // Save order details locally
+    saveOrderDetails({
+      name: name,
+      email: email,
+      address: address,
+      total: total,
+      orderId: response.razorpay_payment_id,
+      timestamp: new Date().toISOString()
+    });
 
-        // Show success UI
-        document.getElementById('checkoutContainer').classList.add('hidden');
-        document.getElementById('successMessage').classList.remove('hidden');
+    // Remove cart
+    localStorage.removeItem('cart');
 
-        // Send confirmation email via EmailJS
-        emailjs.send("service_oxvbppf", "template_gz5rb2n", {
-          name: name,
-          email: email,
-          address: address,
-          order_total: total
-        })
-        .then(function(response) {
-          console.log('SUCCESS!', response.status, response.text);
-        }, function(error) {
-          console.log('FAILED...', error);
-        });
-      },
-      prefill: {
-        name: name,
-        email: email,
-        contact: ""
-      },
-      notes: {
-        address: address
-      },
-      theme: {
-        color: "#2ecc71"
-      },
-      modal: {
-        ondismiss: function() {
-          alert('Payment popup closed. Order not completed.');
-        }
-      }
-    };
+    // Show success UI
+    document.getElementById('checkoutContainer').classList.add('hidden');
+    document.getElementById('successMessage').classList.remove('hidden');
+
+    // Send confirmation email via EmailJS
+    emailjs.send("service_oxvbppf", "template_gz5rb2n", {
+      name: name,
+      email: email,
+      address: address,
+      order_total: total
+    })
+    .then(function(response) {
+      console.log('SUCCESS!', response.status, response.text);
+    }, function(error) {
+      console.log('FAILED...', error);
+    });
+  }, // <-- don't forget this comma here
+  prefill: {
+    name: name,
+    email: email,
+    contact: ""
+  },
+  notes: {
+    address: address
+  },
+  theme: {
+    color: "#2ecc71"
+  },
+  modal: {
+    ondismiss: function() {
+      alert('Payment popup closed. Order not completed.');
+    }
+  }
+};
 
     const rzp = new Razorpay(options);
     rzp.open();
   });
+
+  // Add form validation feedback
+function showError(input, message) {
+  const formGroup = input.parentElement;
+  formGroup.classList.add('error');
+  const error = formGroup.querySelector('.error-message') || document.createElement('small');
+  error.className = 'error-message';
+  error.style.color = 'red';
+  error.textContent = message;
+  formGroup.appendChild(error);
+}
+
+function clearError(input) {
+  const formGroup = input.parentElement;
+  formGroup.classList.remove('error');
+  const error = formGroup.querySelector('.error-message');
+  if (error) {
+    error.remove();
+  }
+}
+
+// Add order confirmation details to localStorage
+function saveOrderDetails(orderData) {
+  const orders = JSON.parse(localStorage.getItem('orders') || '[]');
+  orders.push(orderData);
+  localStorage.setItem('orders', JSON.stringify(orders));
+}
+
 </script>
 
 
