--- a/checkout.html
+++ b/checkout.html
@@ -219,7 +219,7 @@
       });
 
       // Send confirmation email via EmailJS
-      emailjs.send("service_oxvbppf", "template_gz5rb2n", {
+      emailjs.send("service_oxvbppf", "template_s0qu7y9", {
         name: name,
         email: email,
         address: address,
