--- a/checkout.html
+++ b/checkout.html
@@ -122,7 +122,7 @@
 
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 
 <script type="text/javascript">
   // Initialize EmailJS
