--- a/contactform.html
+++ b/contactform.html
@@ -77,8 +77,8 @@
     </div>
 
     <div class="form-group">
-      <label for="address">Shipping Address:</label>
-      <textarea id="address" rows="3" required></textarea>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
     </div>
 
     <button type="submit">Send Message</button>
