--- a/checkout.html
+++ b/checkout.html
@@ -219,18 +219,30 @@
       });
 
       // Send confirmation email via EmailJS
-      emailjs.send("service_oxvbppf", "template_s0qu7y9", {
-        name: name,
-        email: email,
-        address: address,
-        order_total: total,
-        payment_id: response.razorpay_payment_id // Now included
-      })
-      .then(function(emailResponse) {
-        console.log('Email sent!', emailResponse.status, emailResponse.text);
+      // emailjs.send("service_oxvbppf", "template_s0qu7y9", {
+      //   name: name,
+      //   email: email,
+      //   address: address,
+      //   order_total: total,
+      //   payment_id: response.razorpay_payment_id // Now included
+      // })
+      // .then(function(emailResponse) {
+      //   console.log('Email sent!', emailResponse.status, emailResponse.text);
+      // }, function(error) {
+      //   console.log('Email sending failed...', error);
+      // });
+
+      emailjs.sendForm('service_oxvbppf', 'template_s0qu7y9', this)
+      .then(function() {
+        console.log('SUCCESS!');
+        document.getElementById('successMessage').style.display = 'block';
+        document.getElementById('contactForm').reset();
       }, function(error) {
-        console.log('Email sending failed...', error);
+        console.log('FAILED...', error);
+        alert('Something went wrong. Please try again!');
       });
+
+      
 
       // Clear cart
       localStorage.removeItem('cart');
