--- a/checkout.html
+++ b/checkout.html
@@ -232,14 +232,17 @@
       //   console.log('Email sending failed...', error);
       // });
 
-      // Send confirmation email via EmailJS
-      emailjs.sendForm('service_oxvbppf', 'template_s0qu7y9', document.getElementById('checkoutForm'))
+      emailjs.sendForm('service_oxvbppf', 'template_s0qu7y9', this)
       .then(function() {
-        console.log('Email sent successfully.');
-      })
-      .catch(function(error) {
-        console.log('Email sending failed...', error);
+        console.log('SUCCESS!');
+        document.getElementById('successMessage').style.display = 'block';
+        document.getElementById('contactForm').reset();
+      }, function(error) {
+        console.log('FAILED...', error);
+        alert('Something went wrong. Please try again!');
       });
+
+      
 
       // Clear cart
       localStorage.removeItem('cart');
@@ -258,6 +261,33 @@
   rzp.open();
 });
 
+
+  // Add form validation feedback
+function showError(input, message) {
+  const formGroup = input.parentElement;
+  formGroup.classList.add('error');
+  const error = formGroup.querySelector('.error-message') || document.createElement('small');
+  error.className = 'error-message';
+  error.style.color = 'red';
+  error.textContent = message;
+  formGroup.appendChild(error);
+}
+
+function clearError(input) {
+  const formGroup = input.parentElement;
+  formGroup.classList.remove('error');
+  const error = formGroup.querySelector('.error-message');
+  if (error) {
+    error.remove();
+  }
+}
+
+// Add order confirmation details to localStorage
+function saveOrderDetails(orderData) {
+  const orders = JSON.parse(localStorage.getItem('orders') || '[]');
+  orders.push(orderData);
+  localStorage.setItem('orders', JSON.stringify(orders));
+}
 
 </script>
 
